<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.natasaandzic.domaci1.activity.AddNewContactActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/nameTv"
        style="@style/TextLabelStyle"
        android:layout_below="@id/toolbar"
        android:text="@string/name" />

    <EditText
        android:id="@+id/nameEt"
        style="@style/EditTextStyle"
        android:layout_below="@id/nameTv"
        android:autofillHints="@string/name"
        android:hint="@string/name"
        android:inputType="textCapSentences" />

    <TextView
        android:id="@+id/surnameTv"
        style="@style/TextLabelStyle"
        android:layout_below="@id/nameEt"
        android:text="@string/surname" />

    <EditText
        android:id="@+id/surnameEt"
        style="@style/EditTextStyle"
        android:layout_below="@id/surnameTv"
        android:autofillHints="Surname"
        android:hint="@string/surname"
        android:inputType="textCapSentences" />

    <TextView
        android:id="@+id/tv_add_contact_phone"
        style="@style/TextLabelStyle"
        android:layout_below="@id/surnameEt"
        android:text="@string/phone" />

    <EditText
        android:id="@+id/phoneEt"
        style="@style/EditTextStyle"
        android:layout_below="@id/tv_add_contact_phone"
        android:inputType="phone"
        android:hint="@string/phone_number_example"
        android:autofillHints="@string/phone_number_example" />

    <TextView
        android:id="@+id/emailTextView"
        style="@style/TextLabelStyle"
        android:layout_below="@id/phoneEt"
        android:text="@string/email" />

    <EditText
        android:id="@+id/emailEt"
        style="@style/EditTextStyle"
        android:layout_below="@id/emailTextView"
        android:inputType="textEmailAddress"
        android:hint="@string/email_example"
        android:autofillHints="@string/email_example" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:text="@string/save"
        style="@style/ButtonStyle" />

    <Button
        android:id="@+id/captureBtn"
        style="@style/ButtonStyle"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:text="@string/take_a_photo" />

</RelativeLayout>